[package]
name = "qdsa"
version = "0.1.0"
edition = "2021"

[dependencies]
fiat-crypto = { version = "0.1.13", default-features = false }
sha3 = "0.10.1"
subtle = { version = "2.4.1", default-features = false }
zeroize = { version = "1.5.5", default-features = false }

[features]
default = ["std"]
std = ["fiat-crypto/std", "subtle/std"]

[dev-dependencies]
criterion = "0.3.5"
orion = "0.17.1"
rand = { version = "0.8.5", features = ["min_const_gen"] }

[build-dependencies]
cc = "1.0"

[[bench]]
name = "benchmarks"
harness = false
