[package]
name = "qdsa"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
fiat-crypto = "0.1.13"
subtle = "2.4.1"
zeroize = "1.5.5"

[dev-dependencies]
criterion = "0.3.5"
hex-literal = "0.3.4"
rand = { version = "0.8.5", features = ["min_const_gen"] }
sha3 = "0.10.1"
wycheproof = "0.4.0"

[[bench]]
name = "benchmarks"
harness = false
